feat: add font famoly

--- a/theme-variables.css
+++ b/theme-variables.css
@@ -40,4 +40,6 @@
   --text-shadow-default: 1px 1px #fff;
   --font-size-btn: 12px;
   --font-family-arial: Arial;
+
+  --font-family-lato: 'Lato', sans-serif;
 }
